--- a/opdracht 3.2/you.html
+++ b/opdracht 3.2/you.html
@@ -39,7 +39,9 @@
     boek nu<br>
     <input type="submit" name="" id="" > <br>
     <br>emali
-     <input type="email" name="" id="">
+     <input type="email" name="" id=""> <br>
+     wachtwoord <br>
+     <input type="text" name="" id="">
 
     
     
