--- a/ouderavond/ouderavond-project-main/bsa.html
+++ b/ouderavond/ouderavond-project-main/bsa.html
@@ -25,7 +25,7 @@
     <section class="bsa">
       <h2 class="h2bsa">bindend studieadvies</h2>
      
-      <p> 
+      <p class="p1"> 
         Alle studenten in het eerste leerjaar krijgen een bindend studieadvies. <br>
         Deze bepaalt of je door mag gaan met de opleiding. <br>
         Naast het bindend studieadvies is er ook een <br>
@@ -34,6 +34,16 @@
       </p>
     </section>
     <img class="img" src="/ouderavond-project-main/img/aea177117118411eaa7031e8f97a36b6.png" alt="">
+
+   <section class="bsa2">
+    <h2 class="locatiegids">Locatiegids</h2>
+    <p class="p2">
+      In de locatiegids kan je zien waar alle locaties van het techniek college zijn. <br>
+      Je kan ook zien wat voor opleidingen de scholen hebben op die locaties en hoe ze eruit zien. <br>
+      Als je naar de locatiegids gaat kan je zien dat er in totaal 12 scholen zijn van het techniek college. <br>
+      De scholen zien er dus ook allemaal andersr uit.
+    </p>
+   </section>
   </main>
   </body>
 
