--- a/ouderavond/ouderavond-project-main/home.html
+++ b/ouderavond/ouderavond-project-main/home.html
@@ -11,6 +11,7 @@
     <header><h1>welkom</h1>
         <h3> website gemaakt door Nouaman Guendoul <br> en Tuncay Steinmann</h3>
     </header >
+    <main>
     <aside class="sidebar">
         <h2>navigatie</h2>
         <ul>
@@ -22,6 +23,6 @@
         <li><a href="achtergrond.html">Achtergrond-informatie</a></li>
        </ul>
     </aside>
-    
+</main>
 </body>
 </html>
