--- a/ouderavond/ouderavond-project-main/ew.html
+++ b/ouderavond/ouderavond-project-main/ew.html
@@ -15,9 +15,10 @@
       <li><a href="home.html">Home</a></li>
       <li><a href="ce.html">Canvas & eduarte </a></li>
       <li><a href="begeleiding.html">De software & De begeleiding</a></li>
-                                     
       <li><a href="bsa.html">Het bindend studie advies</a></li>
+      <li><a href="/ouderavond-project-main/opleidingswijzer.html"></a></li>
       <li><a href="achtergrond.html">Achtergrond-informatie</a></li>
+      <li><a href="/invul.html">invulformulier</a></li>
       </ul>
   </nav>
   <main>
