--- a/ouderavond/ouderavond-project-main/home.html
+++ b/ouderavond/ouderavond-project-main/home.html
@@ -21,6 +21,7 @@
         <li><a href="ew.html">Het examenplan & De weken</a></li>                                   
         <li><a href="bsa.html">Het bindend studie advies</a></li>
         <li><a href="achtergrond.html">Achtergrond-informatie</a></li>
+        <li><a href="/invul.html">invulformulier</a></li>
        </ul>
     </aside>
 </main>
