--- a/ouderavond/ouderavond-project-main/opleidingswijzer.html
+++ b/ouderavond/ouderavond-project-main/opleidingswijzer.html
@@ -20,8 +20,11 @@
       <li><a href="ew.html">Het examenplan & De weken</a></li>                                   
       <li><a href="bsa.html">Het bindend studie advies</a></li>
       <li><a href="achtergrond.html">Achtergrond-informatie</a></li>
+      <li><a href="invul.html">invulformulier</a></li>
+     
       </ul>
      </nav>
+
      <main>
      <br><br>
      <img class="OP" src="/ouderavond-project-main/img/Opleidingswijzer screenshot.PNG" alt="">
