--- a/ouderavond/ouderavond-project-main/bsa.html
+++ b/ouderavond/ouderavond-project-main/bsa.html
@@ -19,6 +19,7 @@
             <li><a href="ce.html">Canvas & eduarte </a></li>
             <li><a href="ew.html">Het examenplan & De weken</a></li>                                   
             <li><a href="begeleiding.html">De begeleiding</a></li>
+            <li><a href="/invul.html">invulformulier</a></li>
             <li><a href="achtergrond.html">Achtergrond-informatie</a></li></ul>
     </nav>
     <main>
