--- a/ouderavond/ouderavond-project-main/ce.html
+++ b/ouderavond/ouderavond-project-main/ce.html
@@ -20,6 +20,7 @@
         <li><a href="begeleiding.html">De software & De begeleiding</a></li>
         <li><a href="ew.html">Het examenplan & De weken</a></li>                                   
         <li><a href="bsa.html">Het bindend studie advies</a></li>
+        <li><a href="/invul.html">invulformulier</a></li>
         <li><a href="achtergrond.html">Achtergrond-informatie</a></li>
        </ul>
 </nav>
